Implement enhanced 2-step PDF processing with improved classification and extraction
- Introduce new main processing script for enhanced document classification and extraction using Google Generative AI.
- Add prompts module with detailed classification and extraction instructions for vendor invoices and employee reimbursements.
- Update .gitignore to include dynamic log and output directories.
- Enhance logging setup for better tracking of processing outcomes and errors.
- Include support for command-line arguments to specify input/output directories and JSON response handling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 *.env
 venv
 input
-json_responses
+json_responses*
 *.log
 *.csv
 .DS_Store
 __pycache__/
-/logs/
-/output/
-/archive/
+/logs*/
+/output*/
+/archive*/
 .claude
 CLAUDE.md
+
